# chengine2

./: .gitignore  .replit  Cargo.toml  README.md  replit.nix  run.sh
src/: main.rs
src/chengine/: board.rs  color.rs  computer.rs  constant.rs  mod.rs  opening.rs  piece.rs  piece_iter.rs  square.rs  tests.rs
